# tapestry

./: .gitignore  README.md  pyproject.toml  setup.py
models/: make-mobileclip.sh  mobileclip_handler.py
src/tapestry/: app.py  collection.py  database.py  dataset.py  embeddings.py
src/tapestry/config/: app.yaml
src/tapestry/static/js/: app.js  utils.js
src/tapestry/static/js/components/: CollectionsSidebar.js  DraggableGrid.js  ImagePreviewModal.js
src/tapestry/styles/: styles.css
src/tapestry/templates/: index.html
