[tool.poetry]
name = "tapestry"
version = "0.1.0"
description = ""
authors = ["dnl-strnl <129630837+dnl-strnl@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "tapestry", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
chromadb = "^0.6.0"
flask = "^3.1.0"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
pillow = "^11.0.0"
torchserve = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
